--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>привет мир</h1>
+  <a href="my_page.html">Мля страница</a>
+  <ul>
+    <li>
+      <a href="homework_1.html">Домашнее задание 1</a>
+    
+    </li>
+    <li>
+      <a href="homework_2.html">Домашнее задание 2</a>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <a href="lesson_6.html">Урок 6</a>
+    </li>
+  </ul>
 </body>
 </html>
