--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="my_page.html">Мля страница</a>
+  <a href="my_page.html">Моя страница</a>
   <ul>
     <li>
       <a href="homework_1.html">Домашнее задание 1</a>
