--- a/lesson_22.html
+++ b/lesson_22.html
@@ -8,13 +8,29 @@
 </head>
 <body>
     <script>
-        let weekend = false;
-        if (weekend) {
-            console.log('Сегодня выходной')
-        } else {
-            console.log('Опять в школу...')
+        // let count = 0;
+        // while (count < 7) { 
+        //     console.log('Hello World! ' + count)
+        //     count++
+        // } 
+        // for (let i = 0; i < 10; i++) {
+        //     console.log('Hello world ' + i)
+        // } 
+        // let chest = ['sword', 'shield', 'potion']
+        // for (let i = 0; i < chest.length; i++) {
+        //     const element = chest[i];
+        //     console.log(element)
+        // }
+        let words = ['Кокамидопропилпропиленгликольдимонийхлоридфосфат', 'Тетрагидропиранилциклопентилтетрагидропиридопиридиновые', 'Гидразинокарбонилметилбромфенилдигидробенздиазепин'];
+        let word = words[Math.floor(Math.random() * words.length)];
+        let template = [];
+        for (let i = 0; i < word.length; i++) {
+            template.push('_');
         }
-        console.log('Этот блок кода сработает всегда')
+        console.log(template)
+        let remainLetters = word.length
+        alert('Привет я загадал слово состоящее из ' + remainLetters + 'букв, попробуй угадай!')
+        while (remainLetters > 0 )
     </script>
 </body>
 </html>
