--- a/lesson_23.html
+++ b/lesson_23.html
@@ -3,14 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <script>
-        function sayHello(){
-            console.log('Hello world')
+        // let userInput = prompt('Выберите направление движения')
+        // let monster = true
+        
+        // let doSomething = function (direction,obstalcle) {
+        //     if (obstalcle) {
+        //         console.log('Attack goblin and move ' + direction)
+        //     }
+            
+        //     console.log('Move ' + direction)
+        // }
+
+
+        // if (userInput === 'forward', 'backward') {
+        //     doSomething(userInput, '')
+        // } else {
+
+        // }
+
+        // if (userInput === 'forward' && monster) {
+        //     doSomething(userInput,monster)
+        // }
+        // if (userInput === 'backward' && monster) {
+        //     doSomething(userInput,monster)
+        // }
+
+        let foo = 1;
+
+        function addOne(x) {
+            return x + 1 
         }
-        sayHello()
+
+        let bar = addOne(foo);
+        console.log(bar)
     </script>
 </body>
 </html>
