--- a/lesson_22.html
+++ b/lesson_22.html
@@ -4,33 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lesson 24 DOM tree</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
-    <script>
-        // let count = 0;
-        // while (count < 7) { 
-        //     console.log('Hello World! ' + count)
-        //     count++
-        // } 
-        // for (let i = 0; i < 10; i++) {
-        //     console.log('Hello world ' + i)
-        // } 
-        // let chest = ['sword', 'shield', 'potion']
-        // for (let i = 0; i < chest.length; i++) {
-        //     const element = chest[i];
-        //     console.log(element)
-        // }
-        let words = ['Кокамидопропилпропиленгликольдимонийхлоридфосфат', 'Тетрагидропиранилциклопентилтетрагидропиридопиридиновые', 'Гидразинокарбонилметилбромфенилдигидробенздиазепин'];
-        let word = words[Math.floor(Math.random() * words.length)];
-        let template = [];
-        for (let i = 0; i < word.length; i++) {
-            template.push('_');
-        }
-        console.log(template)
-        let remainLetters = word.length
-        alert('Привет я загадал слово состоящее из ' + remainLetters + 'букв, попробуй угадай!')
-        while (remainLetters > 0 )
-    </script>
+    <nav class="navbar navbar-dark bg-dark p-2 mb-2" id="navbar">
+        <a href="" class="navbar-brand">Navbar</a>
+    </nav>
+    <div class="container text-dark">
+        <div id="main" class="card card-body">
+            <h2 class="h1">Add items</h2>
+            <form action="" class="input-group mb-3">
+                <input type="text" class="form-control"><input type="submit" value="submit" class="btn btn-danger">
+            </form>
+            <h2 class="h1">Items</h2>
+            <ul id="items" class="list-group">
+                <li class="list-group-item">Item 1</li>
+                <li class="list-group-item">Item 2</li>
+                <li class="list-group-item">Item 3</li>
+                <li class="list-group-item">Item 4</li>
+                <li class="list-group-item">Item 5</li>
+            </ul>
+        </div>
+    </div>
+    <script src="dom.js"></script>
 </body>
 </html>
