--- a/lesson_24.html
+++ b/lesson_24.html
@@ -5,32 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 24 DOM tree</title>
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark p-2 mb-2" id="navbar">
-        <a href="" class="navbar-brand">Navbar</a>
-    </nav>
-    <div class="container text-dark">
-        <div id="main" class="card card-body">
-            <h2 class="h1">Add items</h2>
-            <form action="" class="input-group mb-3">
-                <input type="text" class="form-control"><input type="submit" value="submit" class="btn btn-danger">
-            </form>
-            <h2 class="h1">Items</h2>
-            <ul id="items" class="list-group">
-                <li class="list-group-item">Item 1<button class="btn btn-danger btn-sm float-right">X</button></li>
-                <li class="list-group-item">Item 2<button class="btn btn-danger btn-sm float-right">X</button></li>
-                <li class="list-group-item">Item 3<button class="btn btn-danger btn-sm float-right">X</button></li>
-                <li class="list-group-item">Item 4<button class="btn btn-danger btn-sm float-right">X</button></li>
-                <li class="list-group-item">Item 5<button class="btn btn-danger btn-sm float-right">X</button></li>
-            </ul>
-            <button class="btn btn-danger" id="button">Click</button>
-            <div id="output"></div>
-            <div id="box" style="width: 200px; height: 200px; background-color: lightgreen;"></div>
+        <a href="" class="navbar-brand">Navbar</a></nav>
+        <div class="container text-dark">
+            <div id="main" class="card-body">
+                <h2 class="h1">Add items</h2>
+                <form action="" class="input-group mb-3">
+                    <input type="text" class="form-control"><input type="summit" value="submit" class="btn btn-danger">
+                </form>
+                <h2 class="h1">Items</h2>
+                <ul id="items" class="list-group">
+                    <li class="list-group-item">Item 1</li>
+                    <li class="list-group-item">Item 2</li>
+                    <li class="list-group-item">Item 3</li>
+                    <li class="list-group-item">Item 4</li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <script src="dom.js"></script>
+        <script src="dom.js"></script>
 </body>
 </html>
