--- a/lesson_32.html
+++ b/lesson_32.html
@@ -7,22 +7,22 @@
     <title>Document</title>
     <style>
         body {
-            margin: 0;
             padding: 0;
+            margin: 0;
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #252423;
+            background-color: black;
         }
-        #canvas {
-            background-color: #fdfff5;
+        canvas {
+            background-color: white;
             border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <canvas id="canvas" width="400" height="400"></canvas>
-    <script src="lesson_31.js"></script>
+    <canvas id = "game" width="600" height="600"></canvas>
+    <script src="lesson_32.js"></script>
 </body>
 </html>
