--- a/lesson_34.html
+++ b/lesson_34.html
@@ -5,24 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: black;
-        }
-        canvas {
-            background-color: white;
-            border-radius: 5px;
-        }
-    </style>
 </head>
 <body>
-    <canvas id = "game" width="600" height="600"></canvas>
-    <script src="lesson_34.js"></script>
+    <nav class="section-navbar">
+        <div class="section-navbar-wraper">
+            <div class="section-navbar-wraper_logo">
+                <a href="#">Логотип</a>
+            </div>
+            <div class="links">
+                <div class="links_link">
+                    <a href="#">Главная</a>
+                </div>
+                <div class="links_link">
+                    <a href="#">Проекты</a>
+                </div>
+                <div class="links_link">
+                    <a href="#">Блог</a>
+                </div>
+                <div class="links_link">
+                    <a href="#">Контакты</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <header class="section-header">
+        <div class="section-header-wraper">
+            <div class="herobox">
+                <div class="herobox_title">
+                    <h2>
+                        Здравствуйте,
+                    </h2>
+                    <h1>
+                        Я Имя Фамилия
+                    </h1>
+                </div>
+                <div class="herobox_subtitle">
+                    <h2>
+                        front-end разработчик, создам лучший сайт для вас
+                    </h2>
+                </div>
+                <div class="herobox_calltoaction">
+                    <button>Узнать больше</button>
+                </div>
+            </div>
+            <div class="section-header-wraper_image"></div>
+        </div>
+    </header>
 </body>
 </html>
